| Summary: | ASTERISK-28944: bridge_softmix: Transitioning a stream from inactive -> sendrecv/sendonly doesn't re-negotiation | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2020-06-10 12:07:48 | Date Closed: | 2020-06-11 16:32:58 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Bridges/bridge_softmix |
| Versions: | 16.10.0 17.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When a stream transitions from inactive to other viable video flowing states bridge_softmix is not adding the source stream in, and thus isn't re-negotiating the remote side. It should. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2020-06-11 16:33:00.228-0500 Change 14543 merged by Friendly Automation: bridge_softmix: Add additional old states for adding new source. [https://gerrit.asterisk.org/c/asterisk/+/14543|https://gerrit.asterisk.org/c/asterisk/+/14543] By: Friendly Automation (friendly-automation) 2020-06-11 16:39:17.972-0500 Change 14512 merged by Friendly Automation: bridge_softmix: Add additional old states for adding new source. [https://gerrit.asterisk.org/c/asterisk/+/14512|https://gerrit.asterisk.org/c/asterisk/+/14512] By: Friendly Automation (friendly-automation) 2020-06-11 16:50:52.238-0500 Change 14544 merged by Friendly Automation: bridge_softmix: Add additional old states for adding new source. [https://gerrit.asterisk.org/c/asterisk/+/14544|https://gerrit.asterisk.org/c/asterisk/+/14544] By: Friendly Automation (friendly-automation) 2020-06-11 16:59:10.069-0500 Change 14545 merged by Friendly Automation: bridge_softmix: Add additional old states for adding new source. [https://gerrit.asterisk.org/c/asterisk/+/14545|https://gerrit.asterisk.org/c/asterisk/+/14545] | ||